--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
                         <h2>Интернет кафе<br></h2>
                             <p>Ксерокс, печать, фото на документы, ламинация, интернет развлечения, ремонт и обслуживание компьютерной техники.
                              Мы работаем круглосуточно, а ещё у нас есть вкусный Кофе</p>
-                                <a href="mailto:fdn_2004@ukr.net">Отправить файл на печать</a>
+                                <a href="mailto:fdn_2004@ukr.net">
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>Отправить файл на печать</a>
                     </div>
                 </div>
                 <svg>
