--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <feDisplacementMap in="SourceGraphic" scale="30"/>
                     </filter>
                 </svg>               
-            <p class="copyrightText">©2020 iCafe <a href="pages/contact.html">Contacts</a></p>
+            <p class="copyrightText">©2020 iCafe<!-- <a href="pages/contact.html">Contacts</a>--></p>
     </section>
     <script src="java/mainJs.js"></script>
 </body>
